terraform/main.tf
# Region

# Key Value pair
resource "aws_key_pair" "my_key_pair" {
  key_name   = "${var.env}-terra-raw-key" #dev-terra-automate-key
  public_key = file("C:/Users/Kunu/.ssh/id_ed25519.pub")
}

# VPC Default
resource "aws_default_vpc" "default" {
}

# Security Group 
resource "aws_security_group" "my_security_group" {
  name        = "${var.env}-terra-security-group"
  vpc_id      = aws_default_vpc.default.id # interpolation
  description = "this is Inbound and outbound rules for your instance Security group"
}

# Inbound & Outbount port rules
resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic" {
  security_group_id = aws_security_group.my_security_group.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

# EC2 instance
resource "aws_instance" "my_instance" {
  count = var.ec2_instance_count
  ami   = var.ec2_ami_id # OS AMI ID
  instance_type = var.ec2_instance_type # Instance Type
  key_name = aws_key_pair.my_key_pair.key_name # Key pair
  vpc_security_group_ids = [aws_security_group.my_security_group.id] # VPC & Security Group

  # root storage (EBS)
  root_block_device {
    volume_size = var.ec2_volume_size
    volume_type = "gp3"
  }

  tags = {
    Name = "${var.env}-terra-automate-server"
    Environment = var.env
  }
}

resource "aws_ec2_instance_state" "my_instance_state" {
  instance_id = aws_instance.my_instance[0].id
  state       = var.ec2_instance_state
}
